# FlatWavyAccounting1

./: .gitignore  .replit  DEPLOYMENT.md  README.md  SETUP_GUIDE.md  TOKENS.md  config.example.py  conversation.md  generate_session.py  main.cs  main.py  pyproject.toml  requirements.txt  status.py  watchdog.py
.agents/memory/: MEMORY.md  fix-logon.md  gold-blueprint-arch.md  mcp-executor-migration.md  xauusd-lot-math.md
artifacts/api-server/src/lib/: ctrader.ts
artifacts/api-server/src/routes/: ctrader.ts  index.ts
attached_assets/: Pasted--Copy-and-Send-this-Final-Updated-Brief-to-Your-Develop_1780210349083.txt  Pasted--Please-update-The-Blueprint-trading-system-with-the-fo_1780286145010.txt
csharp-body/: Blueprint_cBot.cs  PositionMonitor.cs  RiskManager.cs
docs/: SETUP_GUIDE.md  TRADING_LOGIC.md
lib/api-spec/: openapi.yaml
python-brain/: README.md  balance_manager.py  channel_reporter.py  config.py  control_bot.py  ctrader_api.py  find_folders.py  fix_executor.py  gemini_analyzer.py  generate_session.py  git_utils.py  main.py  market_analyzer.py  market_data_feed.py  news_feed.py  requirements.txt  setup_session.py  signal_parser_standalone.py  signal_queue.py  start_tunnel.py  telegram_listener.py
validation/: test_signal_parser.py
