[project]
name = "gold-blueprint-trading"
version = "3.0.0"
description = "Gold Blueprint Trading System - Python Brain"
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "telethon>=1.43.2",
    "aiohttp>=3.9.5",
    "python-dotenv>=1.0.1",
    "cryptg>=0.4.0",
    "yfinance>=0.2.40",
    "aiofiles>=23.0.0",
    "python-telegram-bot>=20.0",
]
